# streamlit-chatbot-interface

./: .gitignore  Dockerfile  app.py  main.py  main_.py  pyproject.toml  requirements.txt  setup.py  st_server.py  streamlit_chat_ui.py  view.py
.streamlit/: config.toml
controller/: controller.py
sl_controller/: controller.py  controller_.py
src/streamlit_view/: streamlit_chat_ui.py  streamlit_single_chat_ui.py  view.py  view_abc.py  view_configurations.py
view/: st_server.py  streamlit_app.py  streamlit_chat_ui.py
view/.streamlit/: config.toml
